# scalapy-demo

./: .gitignore  .scalafmt.conf  README.md  build.sbt  pyproject.toml
project/: plugins.sbt
src/main/resources/: logback.xml
src/main/scala/io/elfinos/scalapy/: Main.scala
