[tool.poetry]
name = "scalapy-demo"
version = "0.1.0"
description = ""
authors = ["David Lee <davie.lee@unomic.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tensorflow = "^2.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
